jvm 增加